--- a/index.html
+++ b/index.html
@@ -11,15 +11,32 @@
 
 <body>
     <div class="keys">
-        <div class="key white" id=""></div>
-        <div class="key white" id=""></div>
-        <div class="key white" id=""></div>
-        <div class="key white" id=""></div>
-        <div class="key white" id=""></div>
-        <div class="key white" id=""></div>
-        <div class="key white" id=""></div>
-        <div class="key white" id=""></div>
+        <div class="key white" data-key="KeyA"></div>
+        <div class="key black" data-key="KeyW"></div>
+        <div class="key white" data-key="KeyS"></div>
+        <div class="key black" data-key="KeyE"></div>
+        <div class="key white" data-key="KeyD"></div>
+        <div class="key white" data-key="KeyF"></div>
+        <div class="key black" data-key="KeyT"></div>
+        <div class="key white" data-key="KeyG"></div>
+        <div class="key black" data-key="KeyY"></div>
+        <div class="key white" data-key="KeyH"></div>
+        <div class="key black" data-key="KeyU"></div>
+        <div class="key white" data-key="KeyJ"></div>
     </div>
+    
+    <audio data-key="KeyA" src="sounds/a.wav"></audio> 
+    <audio data-key="KeyW" src="sounds/w.wav"></audio> 
+    <audio data-key="KeyS" src="sounds/s.wav"></audio> 
+    <audio data-key="KeyE" src="sounds/e.wav"></audio> 
+    <audio data-key="KeyD" src="sounds/d.wav"></audio> 
+    <audio data-key="KeyF" src="sounds/f.wav"></audio> 
+    <audio data-key="KeyT" src="sounds/t.wav"></audio> 
+    <audio data-key="KeyG" src="sounds/g.wav"></audio> 
+    <audio data-key="KeyY" src="sounds/y.wav"></audio> 
+    <audio data-key="KeyH" src="sounds/h.wav"></audio> 
+    <audio data-key="KeyU" src="sounds/u.wav"></audio> 
+    <audio data-key="KeyJ" src="sounds/j.wav"></audio> 
 </body>
 
 </html>
