add basic style

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS Piano</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="https://fav.farm/🎹" />
+    <script src="script.js" defer></script>
 </head>
 
 <body>
-    <div class="keys">
+    <h1>VIRTUAL PIANO</h1>
+    <div class="piano">
         <div class="key white" data-key="KeyA"></div>
         <div class="key black" data-key="KeyW"></div>
         <div class="key white" data-key="KeyS"></div>
