add keyboard functionality

--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
 <body>
     <h1>VIRTUAL PIANO</h1>
     <div class="piano">
-        <div class="key white" data-key="KeyA"></div>
-        <div class="key black" data-key="KeyW"></div>
-        <div class="key white" data-key="KeyS"></div>
-        <div class="key black" data-key="KeyE"></div>
-        <div class="key white" data-key="KeyD"></div>
-        <div class="key white" data-key="KeyF"></div>
-        <div class="key black" data-key="KeyT"></div>
-        <div class="key white" data-key="KeyG"></div>
-        <div class="key black" data-key="KeyY"></div>
-        <div class="key white" data-key="KeyH"></div>
-        <div class="key black" data-key="KeyU"></div>
-        <div class="key white" data-key="KeyJ"></div>
+        <div class="key white" id="a" data-key="KeyA"><span class="black-font">A</span></div>
+        <div class="key black" id="w" data-key="KeyW"><span class="white-font">W</span></div>
+        <div class="key white" id="s" data-key="KeyS"><span class="black-font">S</span></div>
+        <div class="key black" id="e" data-key="KeyE"><span class="white-font">E</span></div>
+        <div class="key white" id="d" data-key="KeyD"><span class="black-font">D</span></div>
+        <div class="key white" id="f" data-key="KeyF"><span class="black-font">F</span></div>
+        <div class="key black" id="t" data-key="KeyT"><span class="white-font">T</span></div>
+        <div class="key white" id="g" data-key="KeyG"><span class="black-font">G</span></div>
+        <div class="key black" id="y" data-key="KeyY"><span class="white-font">Y</span></div>
+        <div class="key white" id="h" data-key="KeyH"><span class="black-font">H</span></div>
+        <div class="key black" id="u" data-key="KeyU"><span class="white-font">U</span></div>
+        <div class="key white" id="j" data-key="KeyJ"><span class="black-font">J</span></div>
     </div>
     
     <audio data-key="KeyA" src="sounds/a.wav"></audio> 
